wiki/content/specifications/vec/v113/classes/modularslot.md
---
title: ModularSlot
toc: false
type: specs
date: "2017-02-21"
draft: false
specification: VEC
version: 1.1.3
documentType: "Recommendation"
elementType: Class
classes:
  - ModularSlot
menu_name: vec-1.1.3
---
<p>A ModularSlot is a place in a connector housing where different other connector housings can be placed during the assembly (e.g. by clicking them into the connector housing).  </p>

## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | electrical_parts |
| **Applied Stereotype**  |   |
| **Base Classifier**     | [AbstractSlot]({{< relref "abstractslot.md" >}})<br/>  |
| **Is Abstract**         | false |
| **Derived Classifiers** |   |

## Attributes
|  Name  |  Type  |  Mult.  |  Description  |  Owning Classifier  |
|--------|--------|---------|---------------|--------------|
|slotNumber | [String]({{< relref "string.md" >}}) | 0..1 | <p>Specifies the number of the slot. This must be unique within a ConnectorHousingSpecification.  </p> | [AbstractSlot]({{< relref "abstractslot.md" >}}) |
|optional | [Boolean]({{< relref "boolean.md" >}}) | 0..1 | <p> Specifies whether the allocation of the ModularSlot is optional or not (can a usage of the connector housing leave this ModularSlot empty.      </p> | [ModularSlot]({{< relref "modularslot.md" >}}) |

## Outgoing Relations
|    Type  |   Role   |   Mult.   |   Mult.   |   Description   |
|----------|----------|-----------|-----------|-----------------|
| [PartVersion]({{< relref "partversion.md" >}}) | allowedInserts | 0..* | 0..* | <p> References the <i>PartVersions</i> that are valid inserts for this <i>ModularSlot.</i>     </p>      <p> This reference points to a <i>PartVersion</i> in order to allow referencing, if the description of individual <i>PartVersions</i> is done with one physical VEC file per <i>PartVersion.</i> However, inserts for a <i>ModularSlot</i> are always ConnectorHousings by itself. Therefore the referenced <i>PartVersion</i> shall have a <i>PrimaryPartType =&#160;ConnectorHousing</i>      </p> |
##  Incoming Relations
|    Type  |   Mult.  |   Role    |   Mult.   |   Description  |
|----------|----------|-----------|-----------|----------------|
| [ModularSlotAddOn]({{< relref "modularslotaddon.md" >}}) | 0..* | slot | 1 |  |
